cargo-features = ["resolver"]

[package]
name = "minion"
version = "0.1.0"
authors = ["Carlos Morgado <carlos primatas.org>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.2.1"
tokio-tungstenite = "*"
tokio = { version = "1.0", features = ["full"] }
url = "2.0.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
